Replace record with Java 11 class for Tsuru deployment