@@ -14,7 +14,7 @@ import java.util.function.ToDoubleFunction;
 
 public class ReportGenerator {
 
-    private static final List<VitalType> VITALS = List.of(
+    private static final List<VitalType> VITALS = Arrays.asList(
             VitalType.BODY_TEMPERATURE,
             VitalType.HEART_RATE,
             VitalType.RESPIRATORY_RATE,
@@ -27,24 +27,24 @@ public class ReportGenerator {
                                          AlertEngine alertEngine) {
 
         long now = System.currentTimeMillis();
-        String title = "Daily Report (Last 24 hours) - " + patient.patientId() + " - " + patient.name();
+        String title = "Daily Report (Last 24 hours) - " + patient.getPatientId() + " - " + patient.getName();
 
         Map<VitalType, DailyReport.VitalSummary> summaries = new EnumMap<>(VitalType.class);
         List<DailyReport.AbnormalItem> abnormalItems = new ArrayList<>();
 
-        if (records == null) records = List.of();
+        if (records == null) records = Collections.emptyList();
 
-        // mapping extractor
-        Map<VitalType, ToDoubleFunction<MinuteRecord>> extractor = Map.of(
-                VitalType.BODY_TEMPERATURE, MinuteRecord::avgTemp,
-                VitalType.HEART_RATE, MinuteRecord::avgHR,
-                VitalType.RESPIRATORY_RATE, MinuteRecord::avgRR,
-                VitalType.SYSTOLIC_BP, MinuteRecord::avgSys,
-                VitalType.DIASTOLIC_BP, MinuteRecord::avgDia
-        );
+        // mapping extractor (Java 11 compatible)
+        Map<VitalType, ToDoubleFunction<MinuteRecord>> extractor = new EnumMap<>(VitalType.class);
+        extractor.put(VitalType.BODY_TEMPERATURE, r -> r.getAvgTemp());
+        extractor.put(VitalType.HEART_RATE, r -> r.getAvgHR());
+        extractor.put(VitalType.RESPIRATORY_RATE, r -> r.getAvgRR());
+        extractor.put(VitalType.SYSTOLIC_BP, r -> r.getAvgSys());
+        extractor.put(VitalType.DIASTOLIC_BP, r -> r.getAvgDia());
 
         for (VitalType vt : VITALS) {
             ToDoubleFunction<MinuteRecord> ex = extractor.get(vt);
+            if (ex == null) continue;
 
             double min = Double.POSITIVE_INFINITY;
             double max = Double.NEGATIVE_INFINITY;
@@ -68,7 +68,7 @@ public class ReportGenerator {
                 if (level == AlertLevel.URGENT) urg++;
 
                 if (level != AlertLevel.NORMAL) {
-                    abnormalItems.add(new DailyReport.AbnormalItem(r.minuteStartMs(), vt, level, v));
+                    abnormalItems.add(new DailyReport.AbnormalItem(r.getMinuteStartMs(), vt, level, v));
                 }
             }
 
@@ -81,8 +81,8 @@ public class ReportGenerator {
             summaries.put(vt, new DailyReport.VitalSummary(min, max, avg, n, warn, urg));
         }
 
-        // abnormal items: sort by time ascending (or latest first, you decide)
-        abnormalItems.sort(Comparator.comparingLong(DailyReport.AbnormalItem::minuteStartMs));
+        // abnormal items: sort by time ascending
+        abnormalItems.sort(Comparator.comparingLong(DailyReport.AbnormalItem::getMinuteStartMs));
 
         return new DailyReport(title, now, summaries, abnormalItems);
     }
@@ -93,45 +93,50 @@ public class ReportGenerator {
         DateTimeFormatter dt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm")
                 .withZone(ZoneId.systemDefault());
 
-        sb.append(report.title()).append("\n");
-        sb.append("Generated at: ").append(dt.format(Instant.ofEpochMilli(report.generatedAtMs()))).append("\n\n");
+        sb.append(report.getTitle()).append("\n");
+        sb.append("Generated at: ").append(dt.format(Instant.ofEpochMilli(report.getGeneratedAtMs()))).append("\n\n");
 
         sb.append("Patient details:\n");
-        sb.append("  ID: ").append(patient.patientId()).append("\n");
-        sb.append("  Name: ").append(patient.name()).append("\n");
-        sb.append("  Age: ").append(patient.age()).append("\n");
-        sb.append("  Ward: ").append(patient.ward()).append("\n");
-        sb.append("  Email: ").append(patient.email()).append("\n");
-        sb.append("  Emergency contact: ").append(patient.emergencyContact()).append("\n\n");
+        sb.append("  ID: ").append(patient.getPatientId()).append("\n");
+        sb.append("  Name: ").append(patient.getName()).append("\n");
+        sb.append("  Age: ").append(patient.getAge()).append("\n");
+        sb.append("  Ward: ").append(patient.getWard()).append("\n");
+        sb.append("  Email: ").append(patient.getEmail()).append("\n");
+        sb.append("  Emergency contact: ").append(patient.getEmergencyContact()).append("\n\n");
 
         sb.append("1) Vital signs value range (minute averages)\n");
         sb.append("--------------------------------------------------\n");
-        for (VitalType vt : List.of(
+
+        for (VitalType vt : Arrays.asList(
                 VitalType.BODY_TEMPERATURE,
                 VitalType.HEART_RATE,
                 VitalType.RESPIRATORY_RATE,
                 VitalType.SYSTOLIC_BP,
                 VitalType.DIASTOLIC_BP
         )) {
-            DailyReport.VitalSummary s = report.summaries().get(vt);
-            sb.append(String.format("%-18s  min=%8.2f  max=%8.2f  avg=%8.2f  minutes=%4d  warning=%3d  urgent=%3d%n",
+            DailyReport.VitalSummary s = report.getSummaries().get(vt);
+            if (s == null) continue;
+
+            sb.append(String.format(
+                    "%-18s  min=%8.2f  max=%8.2f  avg=%8.2f  minutes=%4d  warning=%3d  urgent=%3d%n",
                     pretty(vt),
-                    s.min(), s.max(), s.avg(),
-                    s.totalMinutes(), s.warningMinutes(), s.urgentMinutes()));
+                    s.getMin(), s.getMax(), s.getAvg(),
+                    s.getTotalMinutes(), s.getWarningMinutes(), s.getUrgentMinutes()
+            ));
         }
         sb.append("\n");
 
         sb.append("2) Abnormal details (minute-level)\n");
         sb.append("--------------------------------------------------\n");
-        if (report.abnormalItems().isEmpty()) {
+        if (report.getAbnormalItems().isEmpty()) {
             sb.append("No abnormal minutes detected in the available data.\n");
         } else {
-            for (DailyReport.AbnormalItem item : report.abnormalItems()) {
+            for (DailyReport.AbnormalItem item : report.getAbnormalItems()) {
                 sb.append(String.format("%s  %-18s  level=%-7s  value=%.2f%n",
-                        dt.format(Instant.ofEpochMilli(item.minuteStartMs())),
-                        pretty(item.vitalType()),
-                        item.level(),
-                        item.value()));
+                        dt.format(Instant.ofEpochMilli(item.getMinuteStartMs())),
+                        pretty(item.getVitalType()),
+                        item.getLevel(),
+                        item.getValue()));
             }
         }
 
@@ -139,13 +144,19 @@ public class ReportGenerator {
     }
 
     private String pretty(VitalType vt) {
-        return switch (vt) {
-            case BODY_TEMPERATURE -> "Body temperature";
-            case HEART_RATE -> "Heart rate";
-            case RESPIRATORY_RATE -> "Respiratory rate";
-            case SYSTOLIC_BP -> "Systolic BP";
-            case DIASTOLIC_BP -> "Diastolic BP";
-            default -> vt.name();
-        };
+        switch (vt) {
+            case BODY_TEMPERATURE:
+                return "Body temperature";
+            case HEART_RATE:
+                return "Heart rate";
+            case RESPIRATORY_RATE:
+                return "Respiratory rate";
+            case SYSTOLIC_BP:
+                return "Systolic BP";
+            case DIASTOLIC_BP:
+                return "Diastolic BP";
+            default:
+                return vt.name();
+        }
     }
 }
